--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-    <ul id="listofshit"></ul>
+    <div class="container">
+<div id="lightgreen">
+</div>
+</div>
 </body>
 <script defer src="thayallan.js"></script>
 
