--- a/index.html
+++ b/index.html
@@ -5,14 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container">
-<div id="lightgreen">
-<p>#8bf731</p>
-</div>
-</div>
+    <main>
+        <section class="container">
+            <h1>Hey Nobel Reps</h1>
+            <p>Please something like these colours for this timetable ~Kane</p>
+
+            <p id="lightgreen" class="color">#8bf731</p>
+            <p id='normalgreen' class="color">#008800</p>
+            <p id="brightgreen" class="color">#00ff00</p>
+            <p id="bluegreen" class="color">#1ae769</p>
+            <p id="darkbluegreen" class="color">#0eaa4a</p>
+            <p id="darkerbluegreen" class="color">#0feeab</p>
+
+            <p>Not sure if the text in timetable has to be black <br>
+            <p>But if it isnt, use the darker tones with white text</p>
+
+            <h6><a href="https://github.com/hemisemidemipresent/green">Github</a>
+            </h6>
+
+        </section>
+    </main>
 </body>
 <script defer src="thayallan.js"></script>
 
