--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <section class="container">
             <h1>Hey Nobel Reps</h1>
-            <p>Please something like these colours for this timetable ~Kane</p>
+            <p>Please use something like these colours for this timetable ~Kane</p>
 
             <p id="lightgreen" class="color">#8bf731</p>
             <p id='normalgreen' class="color">#008800</p>
